<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:fragment="com.nintersoft.bibliotecaufabc.activities.SettingsActivity$GeneralFragment"
        app:icon="@drawable/ic_menu_settings"
        app:title="@string/pref_header_general"
        app:summary="@string/pref_summary_general"/>

    <Preference
        app:fragment="com.nintersoft.bibliotecaufabc.activities.SettingsActivity$SyncFragment"
        app:icon="@drawable/ic_pref_sync"
        app:title="@string/pref_header_sync"
        app:summary="@string/pref_summary_sync"/>

    <Preference
        app:fragment="com.nintersoft.bibliotecaufabc.activities.SettingsActivity$PrivacyFragment"
        app:icon="@drawable/ic_pref_privacy"
        app:title="@string/pref_header_privacy"
        app:summary="@string/pref_summary_privacy"/>

    <Preference
        app:icon="@drawable/ic_open_extern"
        app:title="@string/pref_header_privacy_policy"
        app:summary="@string/pref_summary_privacy_policy">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/pref_summary_privacy_policy_intent_data"/>
    </Preference>

    <Preference
        app:icon="@drawable/ic_pref_bug"
        app:title="@string/pref_header_bug_report"
        app:summary="@string/pref_summary_bug_report">

        <intent
            android:action="android.intent.action.SENDTO"
            android:data="@string/pref_summary_bug_intent_data">
            <!--suppress AndroidElementNotAllowed -->
            <extra
                android:name="android.intent.extra.TEXT"
                android:value="@string/pref_summary_bug_intent_extra_message"/>
            <!--suppress AndroidElementNotAllowed -->
            <extra
                android:name="android.intent.extra.SUBJECT"
                android:value="@string/pref_summary_bug_intent_extra_subject"/>
        </intent>
    </Preference>

</PreferenceScreen>
