<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->
    <item android:title="@string/nav_menu_tools">
        <menu>
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_menu_search"
                android:title="@string/nav_menu_search"
                android:titleCondensed="@string/nav_menu_search_min"/>
            <item
                android:id="@+id/nav_renew"
                android:icon="@drawable/ic_menu_renew"
                android:title="@string/nav_menu_renewal" />
            <item
                android:id="@+id/nav_loans"
                android:icon="@drawable/ic_menu_lending"
                android:title="@string/nav_menu_loans" />
            <item
                android:id="@+id/nav_reservation"
                android:icon="@drawable/ic_menu_reservation"
                android:title="@string/nav_menu_reservation" />
        </menu>
    </item>
    <!--</group>-->

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_menu_login"
        android:title="@string/nav_menu_login" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/nav_menu_logout" />

    <item android:title="@string/nav_menu_misc">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_menu_settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_menu_share" />
            <item
                android:id="@+id/nav_quit"
                android:icon="@drawable/ic_menu_quit"
                android:title="@string/nav_menu_leave" />
        </menu>
    </item>

</menu>
