<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                app:srcCompat="@drawable/ic_ufabc_logo"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/ufabc_login_logo_def_size"
                android:layout_height="@dimen/ufabc_login_logo_def_size"
                android:layout_marginBottom="@dimen/form_items_default_margin" />

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_items_default_margin"
                android:textSize="@dimen/label_edit_default_size"
                android:text="@string/label_login_username"/>

            <EditText
                android:id="@+id/edit_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/edit_login_username_placeholder"
                android:hint="@string/edit_login_username_placeholder"
                android:textSize="@dimen/label_edit_default_size"
                android:inputType="textEmailAddress"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_items_default_margin"
                android:textSize="@dimen/label_edit_default_size"
                android:text="@string/label_login_password"/>

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_login_password_placeholder"
                android:autofillHints="@string/edit_login_password_placeholder"
                android:textSize="@dimen/label_edit_default_size"
                android:inputType="textPassword"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/bt_login"
                android:text="@string/bt_login_login"
                android:layout_marginTop="@dimen/form_items_default_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bt_retrieve"
                android:text="@string/bt_login_retrieve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_items_default_margin"
            android:text="@string/label_login_loading"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_connection_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/form_items_default_margin"
            android:text="@string/label_login_connection_error"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/button_try_again"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/form_items_default_margin"
            android:text="@string/bt_login_try_again" />

    </LinearLayout>

</LinearLayout>