<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFiltersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_default_padding"
        android:orientation="vertical">

        <TextView
            android:text="@string/label_search_filter_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/label_form_title_def_size"/>

        <Spinner
            android:id="@+id/spinner_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/label_search_filter_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/form_items_default_margin"
            android:textSize="@dimen/label_form_title_def_size"/>

        <Button
            android:id="@+id/button_toggle_filters"
            android:text="@string/button_search_filter_show_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/filterOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/layout_default_padding"
            android:visibility="gone"/>

        <TextView
            android:text="@string/label_search_filter_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/form_items_default_margin"
            android:layout_marginBottom="@dimen/form_items_default_margin"
            android:textSize="@dimen/label_form_title_def_size"/>

        <LinearLayout
            android:id="@+id/libraryOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </LinearLayout>

</ScrollView>